frontend/test/should_fail/simple_eval_005.grg
rule r
{
	modify {
		eval {
			add(Node);
		}
	}
}